[gd_scene load_steps=25 format=3 uid="uid://h7tl42pvikny"]

[ext_resource type="Texture2D" uid="uid://bccy2s8dfoqc4" path="res://sprites/vfx/president_background/lighthouse.png" id="1_3h3h7"]
[ext_resource type="Script" path="res://scenes/battle_backgrounds/scr_president_background.gd" id="1_sckib"]
[ext_resource type="PackedScene" uid="uid://d3grs3liet5e4" path="res://scenes/vfx/scn_vfx_powerline.tscn" id="2_8t0xc"]
[ext_resource type="Texture2D" uid="uid://bupucffay7rlu" path="res://sprites/vfx/president_background/beam.png" id="2_efvev"]
[ext_resource type="Texture2D" uid="uid://bl0ht3qpuhtrf" path="res://sprites/vfx/spr_lake_mist.png" id="2_shpnw"]
[ext_resource type="Script" path="res://code/scr_mus_bar_counter.gd" id="5_2jjai"]
[ext_resource type="SpriteFrames" uid="uid://cgg6yedlort55" path="res://resources/characters/sfr_greg.tres" id="5_nlbht"]
[ext_resource type="PackedScene" uid="uid://xk5mtrl26xyo" path="res://scenes/characters/overworld/scn_overworld_character.tscn" id="5_sj8jt"]
[ext_resource type="SpriteFrames" uid="uid://unx5ufy0r3l8" path="res://resources/characters/sfr_president.tres" id="6_g0ddx"]
[ext_resource type="Script" path="res://code/scr_textbox.gd" id="9_kqx2m"]
[ext_resource type="Texture2D" uid="uid://csyrhomxysu3f" path="res://sprites/vfx/spr_waves.png" id="9_kw803"]
[ext_resource type="Script" path="res://code/scr_sin_animator.gd" id="10_ds01p"]

[sub_resource type="Gradient" id="Gradient_0jvk6"]
resource_local_to_scene = true
offsets = PackedFloat32Array(0, 0.452282, 1)
colors = PackedColorArray(1, 1, 0.313726, 0, 1, 1, 1, 1, 1, 1, 0, 0.541176)

[sub_resource type="Gradient" id="Gradient_u4ceh"]
resource_local_to_scene = true
offsets = PackedFloat32Array(0, 0.452282, 1)
colors = PackedColorArray(1, 1, 0.313726, 0, 1, 1, 1, 1, 1, 1, 0, 0.541176)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_rryk2"]
resource_local_to_scene = true
gradient = SubResource("Gradient_u4ceh")
fill_from = Vector2(1, 1)

[sub_resource type="Gradient" id="Gradient_ly6d5"]
resource_local_to_scene = true
offsets = PackedFloat32Array(0, 0.452282, 1)
colors = PackedColorArray(1, 1, 0.313726, 0, 1, 1, 1, 1, 1, 1, 0, 0.541176)

[sub_resource type="Curve" id="Curve_578y2"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.320403, 0.105671), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_fh56m"]
curve = SubResource("Curve_578y2")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_f0gpj"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(100, 50, 1)
angle_min = -2.0
angle_max = 2.0
gravity = Vector3(0, 0, 0)
radial_accel_max = 2.0
scale_min = 0.5
scale_max = 2.0
alpha_curve = SubResource("CurveTexture_fh56m")
turbulence_noise_speed_random = 0.57
turbulence_influence_min = 0.057
turbulence_influence_max = 0.114
turbulence_initial_displacement_min = -27.1
turbulence_initial_displacement_max = 41.4

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_2hpv4"]
blend_mode = 1

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_r4bp5"]
blend_mode = 1

[sub_resource type="Animation" id="Animation_lchrs"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(79, 52)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Mist:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(85, 103)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Mist:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../Mist:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_pqi71"]
resource_name = "zoom_in"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.1, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(79, 52), Vector2(79, 10), Vector2(79, 31.3595), Vector2(79, 30)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(4.97368, 4.97368), Vector2(4.97368, 4.97368)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Mist:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(85, 103)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Mist:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../Mist:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(5, 5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uw302"]
_data = {
"RESET": SubResource("Animation_lchrs"),
"zoom_in": SubResource("Animation_pqi71")
}

[node name="PresidentBackground" type="Node2D"]
script = ExtResource("1_sckib")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -3
offset_left = -6.0
offset_top = -3.0
offset_right = 168.0
offset_bottom = 123.0
color = Color(0, 0, 0, 1)

[node name="More" type="Node2D" parent="."]
visible = false

[node name="VfxPowerline" parent="More" instance=ExtResource("2_8t0xc")]
divisions = 15
deviation_distance = 2.5
gradient = SubResource("Gradient_0jvk6")
lifetime = 0.0

[node name="Line2D" parent="More/VfxPowerline" index="0"]
points = PackedVector2Array(-8, -6, -7.68297, 1.03072, -5.89583, 10.0875, -3.08791, 18.5885, -3.05054, 30.3225, 3.50523, 37.8495, 5.64056, 48.1071, 7.17721, 55.7713, 7.94317, 68.2518, 6.291, 74.3854, 10.201, 81.5276, 14.9127, 93.2816, 14.8736, 104.43, 15.631, 113.447, 18, 120)
texture = SubResource("GradientTexture2D_rryk2")

[node name="Start" parent="More/VfxPowerline" index="1"]
position = Vector2(-8, -6)

[node name="End" parent="More/VfxPowerline" index="2"]
position = Vector2(18, 120)

[node name="VfxPowerline2" parent="More" instance=ExtResource("2_8t0xc")]
position = Vector2(132, 4)
divisions = 15
deviation_distance = 2.5
gradient = SubResource("Gradient_ly6d5")
lifetime = 0.0

[node name="Line2D" parent="More/VfxPowerline2" index="0"]
points = PackedVector2Array(-9, -11, -9.35711, -0.869982, -2.54913, 10.5356, -2.34875, 16.9385, 1.2954, 27.7609, -0.560303, 38.6769, 2.00559, 51.5369, 5.13052, 62.3439, 5.64852, 70.311, 8.17502, 78.9459, 12.6641, 92.9174, 12.4414, 101.88, 14.2227, 110.509, 18.5074, 123.333, 21, 131)
texture = SubResource("GradientTexture2D_rryk2")

[node name="Start" parent="More/VfxPowerline2" index="1"]
position = Vector2(-9, -11)

[node name="End" parent="More/VfxPowerline2" index="2"]
position = Vector2(21, 131)

[node name="VfxPowerline3" parent="More" instance=ExtResource("2_8t0xc")]
position = Vector2(73, 4)
divisions = 15
deviation_distance = 2.5
gradient = SubResource("Gradient_u4ceh")
lifetime = 0.0

[node name="Line2D" parent="More/VfxPowerline3" index="0"]
points = PackedVector2Array(26, -7, 25.8474, 3.80382, 21.1629, 9.51416, 19.6554, 23.9469, 14.777, 29.6133, 16.5502, 38.9721, 13.5794, 52.1392, 12.3273, 58.587, 10.2121, 69.1048, 5.71423, 80.9836, 0.674515, 88.3966, -1.54561, 96.8095, -0.946884, 109.453, -1.7641, 114.936, -6, 126)
texture = SubResource("GradientTexture2D_rryk2")

[node name="Start" parent="More/VfxPowerline3" index="1"]
position = Vector2(26, -7)

[node name="End" parent="More/VfxPowerline3" index="2"]
position = Vector2(-6, 126)

[node name="Mist2" type="GPUParticles2D" parent="."]
z_as_relative = false
position = Vector2(85, 103)
amount = 64
process_material = SubResource("ParticleProcessMaterial_f0gpj")
texture = ExtResource("2_shpnw")
lifetime = 16.0
preprocess = 4.0

[node name="Lighthouse" type="Sprite2D" parent="."]
y_sort_enabled = true
position = Vector2(79, 52)
texture = ExtResource("1_3h3h7")
centered = false
offset = Vector2(-38, -55)

[node name="Beam" type="Sprite2D" parent="Lighthouse"]
modulate = Color(1, 1, 1, 0)
material = SubResource("CanvasItemMaterial_2hpv4")
position = Vector2(0, -39)
texture = ExtResource("2_efvev")

[node name="SpinPivot" type="Node2D" parent="Lighthouse"]
modulate = Color(1, 1, 1, 0)
y_sort_enabled = true
position = Vector2(0, -2)

[node name="OverworldCharacter" parent="Lighthouse/SpinPivot" node_paths=PackedStringArray("animated_sprite") instance=ExtResource("5_sj8jt")]
position = Vector2(0, 25)
animated_sprite = NodePath("AnimatedSprite2D2")

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="Lighthouse/SpinPivot/OverworldCharacter"]
material = SubResource("CanvasItemMaterial_r4bp5")
position = Vector2(0, -7)
sprite_frames = ExtResource("6_g0ddx")
animation = &"walk_down"

[node name="OverworldCharacter2" parent="Lighthouse/SpinPivot" node_paths=PackedStringArray("animated_sprite", "collision_shape", "collision_detection_area", "detection_area", "detection_raycast") instance=ExtResource("5_sj8jt")]
position = Vector2(0, -22)
animated_sprite = NodePath("AnimatedSprite2D2")
collision_shape = NodePath("../OverworldCharacter/CollisionShape")
collision_detection_area = NodePath("../OverworldCharacter/CollisionDetectionArea")
detection_area = NodePath("../OverworldCharacter/DetectionArea")
detection_raycast = NodePath("../OverworldCharacter/DetectionArea/DetectionRaycast")

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="Lighthouse/SpinPivot/OverworldCharacter2"]
material = SubResource("CanvasItemMaterial_r4bp5")
position = Vector2(0, -7)
sprite_frames = ExtResource("5_nlbht")
animation = &"walk_down"

[node name="ZoomAnimation" type="AnimationPlayer" parent="Lighthouse"]
libraries = {
"": SubResource("AnimationLibrary_uw302")
}

[node name="Waves" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Waves"]
texture_repeat = 2
position = Vector2(-185.78, 43)
scale = Vector2(1, 1.13134)
texture = ExtResource("9_kw803")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 360, 80)

[node name="Sprite2D2" type="Sprite2D" parent="Waves"]
modulate = Color(0.145098, 0.447059, 0.686275, 1)
z_index = -1
texture_repeat = 2
position = Vector2(-36.9339, 30)
scale = Vector2(1, 1.09368)
texture = ExtResource("9_kw803")
centered = false
flip_h = true
region_enabled = true
region_rect = Rect2(0, 0, 360, 64)

[node name="SinAnimator" type="Node" parent="Waves" node_paths=PackedStringArray("target")]
script = ExtResource("10_ds01p")
property_name = &"position:x"
target = NodePath("../Sprite2D2")
speed = 0.75
min_value = -80.0
max_value = 120.0

[node name="SinAnimator2" type="Node" parent="Waves" node_paths=PackedStringArray("target")]
script = ExtResource("10_ds01p")
property_name = &"position:x"
target = NodePath("../Sprite2D")
min_value = -96.0
max_value = 180.0
offset = 3.575

[node name="SinAnimator3" type="Node" parent="Waves" node_paths=PackedStringArray("target")]
script = ExtResource("10_ds01p")
property_name = &"scale:y"
target = NodePath("../Sprite2D")
speed = 2.14
min_value = 1.1
max_value = 0.12
offset = 3.575

[node name="SinAnimator4" type="Node" parent="Waves" node_paths=PackedStringArray("target")]
script = ExtResource("10_ds01p")
property_name = &"scale:y"
target = NodePath("../Sprite2D2")
speed = 0.79
min_value = 1.1
max_value = 0.12
offset = 3.575

[node name="Mist" type="GPUParticles2D" parent="."]
z_as_relative = false
position = Vector2(85, 103)
amount = 64
process_material = SubResource("ParticleProcessMaterial_f0gpj")
texture = ExtResource("2_shpnw")
lifetime = 16.0
preprocess = 4.0
local_coords = true

[node name="MusBarCounter" type="Node" parent="."]
script = ExtResource("5_2jjai")
bpm = 155.0

[node name="TextBox" type="RichTextLabel" parent="."]
offset_left = 1.0
offset_top = 1.0
offset_right = 159.0
offset_bottom = 34.0
theme_override_colors/font_shadow_color = Color(1, 1, 1, 0.219608)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 1
theme_override_constants/shadow_outline_size = 4
theme_override_constants/outline_size = 2
text = "uiuiuhiuiuhiuhiuhiuhui"
script = ExtResource("9_kqx2m")

[editable path="More/VfxPowerline"]
[editable path="More/VfxPowerline2"]
[editable path="More/VfxPowerline3"]
